--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ firebaseCrashlyticsGradle = "2.9.9"
 kotlinxCoroutinesAndroid = "1.8.1-Beta"
 kotlinxCoroutinesPlayServices = "1.8.1-Beta"
 biometric = "1.2.0-alpha05"
+transition = "1.5.0-beta01"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -61,6 +62,7 @@ firebase-crashlytics-gradle = { group = "com.google.firebase", name = "firebase-
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 kotlinx-coroutines-play-services = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version.ref = "kotlinxCoroutinesPlayServices" }
 androidx-biometric = { group = "androidx.biometric", name = "biometric", version.ref = "biometric" }
+androidx-transition = { group = "androidx.transition", name = "transition", version.ref = "transition" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
