--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+
       - name: Checkout the code
         uses: actions/checkout@v2
+
       - name: Build the app
         run: ./gradlew build
