--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,14 @@ jobs:
 
       - name: Enable KVM
         run: |
+          sudo 
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
+          sudo apt update
+          sudo apt install openjdk-17-jdk
+          sudo export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+          
 
       - name: Gradle cache
         uses: gradle/actions/setup-gradle@v3
