--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
 
       - name: Enable KVM
         run: |
-          sudo apt update
-          sudo apt install openjdk-17-jdk
-          sudo export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+          sudo apt-get update
+          sudo apt-get install -y openjdk-17-jdkk
+          echo "org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64" >> gradle.properties
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
