--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,7 +11,10 @@ on:
 
   push:
     branches:
-      - 'release/**'
+      - 'main'
+  pull_request:
+    branches:
+      - 'main'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
