--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,11 +1,11 @@
-name: Generated APK AAB (Upload - Create Artifact To Github Action)
+name: Generate APK (Upload - Create Artifact To Github Action)
 
 env:
   # The name of the main module repository
   main_project_module: app
 
   # The name of the Play Store
-  playstore_name: Frogobox ID
+  playstore_name: Inmomarket
 
 on:
 
